# HCP

./: .env.example  .gitignore  CMakeLists.txt  README.md  main.py  naive_main.py  paralel_main.py  requirements.txt  tests.sh
CppBindings/include/: HarmonicModule.hpp
CppBindings/src/: bindings.cpp  main.cpp
Results/: kprofile.lprof  kprofile.txt  profile_results.prof  profile_results.txt
src/: HarmonicModule.cpp
